APCS-Karel-Unit-1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\KarelJRobot.jar;H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\mbsbb.jar;H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\mbsgui.jar;H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\objectdraw.jar;H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1
-d
H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\doc
-encoding
UTF-8
-charset
UTF-8
H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\lab_2\pair_programming\Harvester.java
<---- end of javadoc command ---->
Loading source file H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\lab_2\pair_programming\Harvester.java...
H:\APCS-A-CH-0-Karel-master\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\lab_2\pair_programming\Harvester.java:30: error: reached end of file while parsing
    }
     ^
1 error
